Ocultar títulos repetidos de pestañas en menú

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <button class="tab-inactive px-4 py-2 rounded-full transition-all" id="tab-bebidas" onclick="showTab('bebidas')">Bebidas</button>
                 </div>
                 <section id="section-hamburguesas" class="tab-section">
-                    <h2 class="text-xl font-semibold mb-4 text-yellow-900">Hamburguesas</h2>
+                    <!-- <h2 class="text-xl font-semibold mb-4 text-yellow-900">Hamburguesas</h2> -->
                     <div class="space-y-4">
                         <div class="bg-white rounded-lg shadow-md border-l-8 border-yellow-400 p-4">
                             <h3 class="font-medium text-yellow-900">Cheese Simple</h3>
@@ -367,7 +367,7 @@
                     </div>
                 </section>
                 <section id="section-acompanamientos" class="tab-section hidden">
-                    <h2 class="text-xl font-semibold mb-4 text-yellow-900">Acompañamientos</h2>
+                    <!-- <h2 class="text-xl font-semibold mb-4 text-yellow-900">Acompañamientos</h2> -->
                     <div class="space-y-4">
                         <div class="bg-white rounded-lg shadow-md border-l-8 border-yellow-400 p-4">
                             <h3 class="font-medium text-yellow-900">Papas Fritas</h3>
@@ -388,7 +388,7 @@
                     </div>
                 </section>
                 <section id="section-bebidas" class="tab-section hidden">
-                    <h2 class="text-xl font-semibold mb-4 text-yellow-900">Bebidas</h2>
+                    <!-- <h2 class="text-xl font-semibold mb-4 text-yellow-900">Bebidas</h2> -->
                     <div class="space-y-4">
                         <div class="bg-white rounded-lg shadow-md border-l-8 border-yellow-400 p-4">
                             <h3 class="font-medium text-yellow-900">Coca Personal</h3>
